--- a/content/1-为什么我应该创作.md
+++ b/content/1-为什么我应该创作.md
@@ -10,7 +10,7 @@ Status: published
 > “When you don't create things, you become defined by your tastes rather than ability. Your tastes only narrow & exclude people. So create.”  
 > - by why_the_lucky_stiff  
 
-参与一段不成功的短暂创业后，我打算在家赋闲一段时间，回顾和调整，思考什么才是接下来要做的正确的事。搜罗中读到最近 Twitter 上很火的、并被翻译成多国文字的推文  [Naval Ravikant：如何变的富有，不需要任何的运气](http://mp.weixin.qq.com/s?__biz=MzAwNzU2NzI3Nw==&mid=2650532368&idx=1&sn=86c37e6c5358a639fd14d9ae4b9ee0aa&chksm=837368d2b404e1c4539c5b7f6174e7b6b19be82230bf120d8ccbbf9357e2d2adb10e3902a728&scene=21#wechat_redirect) ，很喜欢。
+短暂地参与一段创业并退出后，我打算在家赋闲一段时间，回顾和调整，思考什么才是接下来要做的正确的事。搜罗中读到最近 Twitter 上很火的、并被翻译成多国文字的推文  [Naval Ravikant：如何变的富有，不需要任何的运气](http://mp.weixin.qq.com/s?__biz=MzAwNzU2NzI3Nw==&mid=2650532368&idx=1&sn=86c37e6c5358a639fd14d9ae4b9ee0aa&chksm=837368d2b404e1c4539c5b7f6174e7b6b19be82230bf120d8ccbbf9357e2d2adb10e3902a728&scene=21#wechat_redirect) ，很喜欢。
 
 Naval 的观点，总结起来是说，靠租赁时间是无法获得财富自由的，财富自由只能通过拥有睡后收入的资产来获得；这个世界没有快速致富的体系，一生中所有的回报，财富、关系、或者知识，都是来源于复利，那些所谓的快速致富体系只是告诉你怎么从别人身上掠夺；通过为社会创造想要却不知道如何得到的作品可以让你变得富有；程序和媒体作品是无需别人许可即可使用的规模化杠杆；将以上两者结合起来，创造出可规模化的资产，你就能获得财富自由。
 
