--- a/content/2-十分钟搭建一个加密货币虚拟助手.md
+++ b/content/2-十分钟搭建一个加密货币虚拟助手.md
@@ -104,7 +104,7 @@ def get_price():
 
 ![]({filename}/images/2/price_no_context.png)
 
-#### 创建上下文
+#### 创建 Context
 
 假如我们问完比特币价格后，想随口问一下「以太坊呢？」，希望也能正确回答。这就需要根据上一个问题的上下文来推断这个问题的意图了。在 ask_price intent 的 context 中添加一条 Output context，取名叫 coin_name。Save。
 
@@ -118,7 +118,7 @@ def get_price():
 
 Default Welcome Intent 和 Default Fallback Intent 分别是系统欢迎的内容和不能识别后显式地内容，将其按照你的喜好修改、保存即可。这样聊天机器人的核心就完成了。
 
-### 创建 Telegram 并绑定
+### 创建 Telegram Bot 并绑定 Dialogflow
 
 Telegram 申请一个机器人账号非常简单，在聊天中添加 [BotFather](https://telegram.me/botfather) 后，按照爸爸的提示一步步创建一个名为 Price Doge 的 Bot。
 
