--- a/content/2-十分钟搭建一个加密货币虚拟助手.md
+++ b/content/2-十分钟搭建一个加密货币虚拟助手.md
@@ -124,7 +124,7 @@ Telegram 申请一个机器人账号非常简单，在聊天中添加 [BotFather
 
 在 Dialogflow 的 Integration 里面，绑定 Telegram，输入 Telegram token。
 
-![]({filename}/images/2/chat1.png)
+![]({filename}/images/2/chat1.jpeg)
 
 ### 完成
 
