--- a/content/1-为什么我应该创作.md
+++ b/content/1-为什么我应该创作.md
@@ -6,8 +6,11 @@ Tags: 思考, 创作
 Slug: why-should-i-create
 Authors: mult1vac
 Status: published
+Summary: ![index]({filename}/images/1/create.jpeg) “When you don't create things, you become defined by your tastes rather than ability. Your tastes only narrow & exclude people. So create.”  - by why_the_lucky_stiff  
 
-![]({filename}/images/1/create.jpeg)
+
+
+![normal]({filename}/images/1/create.jpeg)
 
 > “When you don't create things, you become defined by your tastes rather than ability. Your tastes only narrow & exclude people. So create.”  
 > - by why_the_lucky_stiff  
