--- a/content/5-自己动手写带场景感知的虚拟助手.md
+++ b/content/5-自己动手写带场景感知的虚拟助手.md
@@ -6,10 +6,13 @@ Tags: AI, bot, chatbot
 Slug: chatbot-from-scratch
 Authors: mult1vac
 Status: published
+Summary: ![index]({filename}/images/5/context.jpg) 接上一篇 [Chatbot 1 - 使用 Dialogflow 十分钟搭建虚拟助手](multivac.com/build-chatbot-in-ten-minutes.html)，这次我们将不再依赖 Dialogflow 提供的功能，而是从零到一手写代码，探索聊天机器人的基本工作原理，并搭建一个意式餐厅的在线客服机器人。
 
-![]({filename}/images/5/context.jpg)
 
-接上一篇[Chatbot 1 - 使用 Dialogflow 十分钟搭建虚拟助手](multivac.com/build-chatbot-in-ten-minutes.html)，这次我们将不再依赖 Dialogflow 提供的功能，而是从零到一手写代码，探索聊天机器人的基本工作原理，并搭建一个意式餐厅的在线客服机器人。
+
+![normal]({filename}/images/5/context.jpg)
+
+接上一篇 [Chatbot 1 - 使用 Dialogflow 十分钟搭建虚拟助手](multivac.com/build-chatbot-in-ten-minutes.html)，这次我们将不再依赖 Dialogflow 提供的功能，而是从零到一手写代码，探索聊天机器人的基本工作原理，并搭建一个意式餐厅的在线客服机器人。
 
 ## 训练对话意图
 上篇中，我们在 Dialogflow 中的 Intent 中设置了一系列的对话，作为模型学习的样本。这里我们同样需要为机器人构建不同的 Intent 可能遇到的问题和回答，以提供给神经网络模型学习，配置的内容通过 JSON 格式保存。下面示例展示「推荐菜单」这个意图的定义。完整版的 JSON 文件在[这里](https://github.com/apex51/my-chatbot-code/blob/master/chatbot-2/intents.json)。
@@ -274,8 +277,10 @@ OK，正在为您接通本店电话，请稍等。
 ```
 >>> classify("Hello")
 [('greeting', 0.9974165)]
+
 >>> classify("今天")
 [('today', 0.9824814), ('hours', 0.032728897)]
+
 >>> reply("今天")
 我们营业时间是 9am-9pm
 ```
