--- a/content/2-十分钟搭建一个加密货币虚拟助手.md
+++ b/content/2-十分钟搭建一个加密货币虚拟助手.md
@@ -6,14 +6,16 @@ Tags: AI, bot, chatbot
 Slug: build-chatbot-in-ten-minutes
 Authors: mult1vac
 Status: published
+Summary: ![index]({filename}/images/2/os.jpg) 本文是一篇使用 Google Dialogflow、Python 和 Telegram 快速搭建聊天机器人的教程，bot 能根据提问，帮你从 [WorldCoinIndex](https://www.worldcoinindex.com/) 上找到对应的货币价格。搭建的过程能帮你快速了解 Chatbot 的简单原理。Let’s go！
 
-![]({filename}/images/2/os.jpg)
+
+![normal]({filename}/images/2/os.jpg)
 
 本文是一篇使用 Google Dialogflow、Python 和 Telegram 快速搭建聊天机器人的教程，bot 能根据提问，帮你从 [WorldCoinIndex](https://www.worldcoinindex.com/) 上找到对应的货币价格。搭建的过程能帮你快速了解 Chatbot 的简单原理。Let’s go！
 
 ### 什么是 Dialogflow？
 
-![]({filename}/images/2/dialog-flow.png)
+![small]({filename}/images/2/dialog-flow.png)
 
 [Dialogflow](https://dialogflow.com/) 来自 Google，它为开发者提供了快速搭建虚拟助手的工具，前身是 API.ai，于 2017 年 10 月 10 日更名为 Dialogflow。市场上类似的产品还有 FB 的 wit.ai、IBM 的 Watson 和 MS 的 luis.ai。（关于他们的详细对比可参考这篇 [Quora](http://qr.ae/TUprvT) 的帖子）
 
@@ -33,7 +35,7 @@ Status: published
 
 实体是从对话中抽取出的信息，这里需要为数字货币的名称创建实体。点击 Entities，点击 Create Entity，取名 coin_name，输入「EOS」，「比特币」，「以太坊」，Save 保存。
 
-![]({filename}/images/2/entity.png)
+![normal]({filename}/images/2/entity.png)
 
 #### 创建意图和默认回答
 
@@ -45,7 +47,7 @@ Status: published
 
 这时候可以在最右侧的 Try it now 中查看效果，输入「比特币现在所少钱了」，可以看到回答生效了。
 
-![]({filename}/images/2/intents.png)
+![normal]({filename}/images/2/intents.png)
 
 #### 创建 Python Web 服务
 
@@ -96,23 +98,23 @@ def get_price():
 
 回到 Dialogflow，进入 Fulfillment，enable Webhook，输入 pythonanywhere 的 URL，选择 enable webhook for all domains，Save 保存。
 
-![]({filename}/images/2/fulfillment.png)
+![normal]({filename}/images/2/fulfillment.png)
 
 回到 Intents，进入 ask_price，在 Fulfillment 中 enable webhook call for this intent，Save 保存。
 
 这时候在右侧输入问题，就能获得价格信息了。
 
-![]({filename}/images/2/price_no_context.png)
+![normal]({filename}/images/2/price_no_context.png)
 
 #### 创建 Context
 
 假如我们问完比特币价格后，想随口问一下「以太坊呢？」，希望也能正确回答。这就需要根据上一个问题的上下文来推断这个问题的意图了。在 ask_price intent 的 context 中添加一条 Output context，取名叫 coin_name。Save。
 
-![]({filename}/images/2/context1.png)
+![normal]({filename}/images/2/context1.png)
 
 新建一个 intent，取名 ask_price.context，在 Training Phrases 中添加「那比特币呢？」，「以太坊呢？」，「EOS怎么样？」，Responses 中添加「这我就不知道啦！」，Fulfillment 中开启 Enable webhook call for this intent。保存。这时候在右侧先问「比特币价格是多少」后，问「EOS呢？」，会发现上下文功能已经 OK。
 
-![]({filename}/images/2/context2.png)
+![normal]({filename}/images/2/context2.png)
 
 #### 修改欢迎内容和错误回滚内容
 
@@ -124,7 +126,7 @@ Telegram 申请一个机器人账号非常简单，在聊天中添加 [BotFather
 
 在 Dialogflow 的 Integration 里面，绑定 Telegram，输入 Telegram token。
 
-![]({filename}/images/2/chat1.jpeg)
+![normal]({filename}/images/2/chat1.jpeg)
 
 ### 完成
 
